cmake_minimum_required(VERSION 2.8)

project(freeimage)

set(FREEIMAGE_SOURCES
  DeprecationManager/Deprecated.cpp
  DeprecationManager/DeprecationMgr.cpp
  FreeImage/BitmapAccess.cpp
  FreeImage/ColorLookup.cpp
  FreeImage/FreeImage.cpp
  FreeImage/FreeImageIO.cpp
  FreeImage/GetType.cpp
  FreeImage/MemoryIO.cpp
  FreeImage/PixelAccess.cpp
  FreeImage/J2KHelper.cpp
  FreeImage/MNGHelper.cpp
  FreeImage/Plugin.cpp
  FreeImage/PluginBMP.cpp
  FreeImage/PluginCUT.cpp
  FreeImage/PluginDDS.cpp
  FreeImage/PluginEXR.cpp
  FreeImage/PluginG3.cpp
  FreeImage/PluginGIF.cpp
  FreeImage/PluginHDR.cpp
  FreeImage/PluginICO.cpp
  FreeImage/PluginIFF.cpp
  FreeImage/PluginJ2K.cpp
  FreeImage/PluginJNG.cpp
  FreeImage/PluginJP2.cpp
  FreeImage/PluginJPEG.cpp
  FreeImage/PluginKOALA.cpp
  FreeImage/PluginMNG.cpp
  FreeImage/PluginPCD.cpp
  FreeImage/PluginPCX.cpp
  FreeImage/PluginPFM.cpp
  FreeImage/PluginPICT.cpp
  FreeImage/PluginPNG.cpp
  FreeImage/PluginPNM.cpp
  FreeImage/PluginPSD.cpp
  FreeImage/PluginRAS.cpp
  FreeImage/PluginRAW.cpp
  FreeImage/PluginSGI.cpp
  FreeImage/PluginTARGA.cpp
  FreeImage/PluginTIFF.cpp
  FreeImage/PluginWBMP.cpp
  FreeImage/PluginWebP.cpp
  FreeImage/PluginXBM.cpp
  FreeImage/PluginXPM.cpp
  FreeImage/PSDParser.cpp
  FreeImage/TIFFLogLuv.cpp
  FreeImage/Conversion.cpp
  FreeImage/Conversion16_555.cpp
  FreeImage/Conversion16_565.cpp
  FreeImage/Conversion24.cpp
  FreeImage/Conversion32.cpp
  FreeImage/Conversion4.cpp
  FreeImage/Conversion8.cpp
  FreeImage/ConversionFloat.cpp
  FreeImage/ConversionRGB16.cpp
  FreeImage/ConversionRGBA16.cpp
  FreeImage/ConversionRGBAF.cpp
  FreeImage/ConversionRGBF.cpp
  FreeImage/ConversionType.cpp
  FreeImage/ConversionUINT16.cpp
  FreeImage/Halftoning.cpp
  FreeImage/tmoColorConvert.cpp
  FreeImage/tmoDrago03.cpp
  FreeImage/tmoFattal02.cpp
  FreeImage/tmoReinhard05.cpp
  FreeImage/ToneMapping.cpp
  FreeImage/LFPQuantizer.cpp
  FreeImage/NNQuantizer.cpp
  FreeImage/WuQuantizer.cpp
  FreeImage/CacheFile.cpp
  FreeImage/MultiPage.cpp
  FreeImage/ZLibInterface.cpp
  FreeImageToolkit/Background.cpp
  FreeImageToolkit/BSplineRotate.cpp
  FreeImageToolkit/Channels.cpp
  FreeImageToolkit/ClassicRotate.cpp
  FreeImageToolkit/Colors.cpp
  FreeImageToolkit/CopyPaste.cpp
  FreeImageToolkit/Display.cpp
  FreeImageToolkit/Flip.cpp
  FreeImageToolkit/JPEGTransform.cpp
  FreeImageToolkit/MultigridPoissonSolver.cpp
  FreeImageToolkit/Rescale.cpp
  FreeImageToolkit/Resize.cpp
  Metadata/Exif.cpp
  Metadata/FIRational.cpp
  Metadata/FreeImageTag.cpp
  Metadata/IPTC.cpp
  Metadata/TagConversion.cpp
  Metadata/TagLib.cpp
  Metadata/XTIFF.cpp
)

set(LIBJPEG_SOURCES
  LibJPEG/jaricom.c
  LibJPEG/jcapimin.c
  LibJPEG/jcapistd.c
  LibJPEG/jcarith.c
  LibJPEG/jccoefct.c
  LibJPEG/jccolor.c
  LibJPEG/jcdctmgr.c
  LibJPEG/jchuff.c
  LibJPEG/jcinit.c
  LibJPEG/jcmainct.c
  LibJPEG/jcmarker.c
  LibJPEG/jcmaster.c
  LibJPEG/jcomapi.c
  LibJPEG/jcparam.c
  LibJPEG/jcprepct.c
  LibJPEG/jcsample.c
  LibJPEG/jctrans.c
  LibJPEG/jdapimin.c
  LibJPEG/jdapistd.c
  LibJPEG/jdarith.c
  LibJPEG/jdatadst.c
  LibJPEG/jdatasrc.c
  LibJPEG/jdcoefct.c
  LibJPEG/jdcolor.c
  LibJPEG/jddctmgr.c
  LibJPEG/jdhuff.c
  LibJPEG/jdinput.c
  LibJPEG/jdmainct.c
  LibJPEG/jdmarker.c
  LibJPEG/jdmaster.c
  LibJPEG/jdmerge.c
  LibJPEG/jdpostct.c
  LibJPEG/jdsample.c
  LibJPEG/jdtrans.c
  LibJPEG/jerror.c
  LibJPEG/jfdctflt.c
  LibJPEG/jfdctfst.c
  LibJPEG/jfdctint.c
  LibJPEG/jidctflt.c
  LibJPEG/jidctfst.c
  LibJPEG/jidctint.c
  LibJPEG/jmemmgr.c
  LibJPEG/jmemnobs.c
  LibJPEG/jquant1.c
  LibJPEG/jquant2.c
  LibJPEG/jutils.c
  LibJPEG/transupp.c
)

set(LIBOPENJPEG_SOURCES
  LibOpenJPEG/bio.c
  LibOpenJPEG/cio.c
  LibOpenJPEG/dwt.c
  LibOpenJPEG/event.c
  LibOpenJPEG/function_list.c
  LibOpenJPEG/image.c
  LibOpenJPEG/invert.c
  LibOpenJPEG/j2k.c
  LibOpenJPEG/jp2.c
  LibOpenJPEG/mct.c
  LibOpenJPEG/mqc.c
  LibOpenJPEG/openjpeg.c
  LibOpenJPEG/opj_clock.c
  LibOpenJPEG/pi.c
  LibOpenJPEG/raw.c
  LibOpenJPEG/t1.c
  LibOpenJPEG/t2.c
  LibOpenJPEG/tcd.c
  LibOpenJPEG/tgt.c
)

set(LIBPNG_SOURCES
  LibPNG/png.c
  LibPNG/pngerror.c
  LibPNG/pngget.c
  LibPNG/pngmem.c
  LibPNG/pngpread.c
  LibPNG/pngread.c
  LibPNG/pngrio.c
  LibPNG/pngrtran.c
  LibPNG/pngrutil.c
  LibPNG/pngset.c
  LibPNG/pngtrans.c
  LibPNG/pngwio.c
  LibPNG/pngwrite.c
  LibPNG/pngwtran.c
  LibPNG/pngwutil.c
)

set(LIBRAWLITE_SOURCES
  LibRawLite/internal/dcraw_common.cpp
  LibRawLite/internal/dcraw_fileio.cpp
  LibRawLite/internal/demosaic_packs.cpp
  LibRawLite/src/libraw_c_api.cpp
  LibRawLite/src/libraw_cxx.cpp
  LibRawLite/src/libraw_datastream.cpp
)

set(LIBTIFF_SOURCES
  LibTIFF4/tif_aux.c
  LibTIFF4/tif_close.c
  LibTIFF4/tif_codec.c
  LibTIFF4/tif_color.c
  LibTIFF4/tif_compress.c
  LibTIFF4/tif_dir.c
  LibTIFF4/tif_dirinfo.c
  LibTIFF4/tif_dirread.c
  LibTIFF4/tif_dirwrite.c
  LibTIFF4/tif_dumpmode.c
  LibTIFF4/tif_error.c
  LibTIFF4/tif_extension.c
  LibTIFF4/tif_fax3.c
  LibTIFF4/tif_fax3sm.c
  LibTIFF4/tif_flush.c
  LibTIFF4/tif_getimage.c
  LibTIFF4/tif_jpeg.c
  LibTIFF4/tif_luv.c
  LibTIFF4/tif_lzma.c
  LibTIFF4/tif_lzw.c
  LibTIFF4/tif_next.c
  LibTIFF4/tif_ojpeg.c
  LibTIFF4/tif_open.c
  LibTIFF4/tif_packbits.c
  LibTIFF4/tif_pixarlog.c
  LibTIFF4/tif_predict.c
  LibTIFF4/tif_print.c
  LibTIFF4/tif_read.c
  LibTIFF4/tif_strip.c
  LibTIFF4/tif_swab.c
  LibTIFF4/tif_thunder.c
  LibTIFF4/tif_tile.c
  LibTIFF4/tif_version.c
  LibTIFF4/tif_warning.c
  LibTIFF4/tif_write.c
  LibTIFF4/tif_zip.c
)

set(LIBWEBP_SOURCES
  LibWebP/src/dec/dec.alpha.c
  LibWebP/src/dec/dec.buffer.c
  LibWebP/src/dec/dec.frame.c
  LibWebP/src/dec/dec.idec.c
  LibWebP/src/dec/dec.io.c
  LibWebP/src/dec/dec.quant.c
  LibWebP/src/dec/dec.tree.c
  LibWebP/src/dec/dec.vp8.c
  LibWebP/src/dec/dec.vp8l.c
  LibWebP/src/dec/dec.webp.c
  LibWebP/src/dsp/dsp.alpha_processing.c
  LibWebP/src/dsp/dsp.alpha_processing_sse2.c
  LibWebP/src/dsp/dsp.argb.c
  LibWebP/src/dsp/dsp.argb_sse2.c
  LibWebP/src/dsp/dsp.cost.c
  LibWebP/src/dsp/dsp.cost_sse2.c
  LibWebP/src/dsp/dsp.cpu.c
  LibWebP/src/dsp/dsp.dec.c
  LibWebP/src/dsp/dsp.dec_clip_tables.c
  LibWebP/src/dsp/dsp.dec_neon.c
  LibWebP/src/dsp/dsp.dec_sse2.c
  LibWebP/src/dsp/dsp.enc.c
  LibWebP/src/dsp/dsp.enc_avx2.c
  LibWebP/src/dsp/dsp.enc_neon.c
  LibWebP/src/dsp/dsp.enc_sse2.c
  LibWebP/src/dsp/dsp.filters.c
  LibWebP/src/dsp/dsp.filters_sse2.c
  LibWebP/src/dsp/dsp.lossless.c
  LibWebP/src/dsp/dsp.lossless_neon.c
  LibWebP/src/dsp/dsp.lossless_sse2.c
  LibWebP/src/dsp/dsp.rescaler.c
  LibWebP/src/dsp/dsp.upsampling.c
  LibWebP/src/dsp/dsp.upsampling_neon.c
  LibWebP/src/dsp/dsp.upsampling_sse2.c
  LibWebP/src/dsp/dsp.yuv.c
  LibWebP/src/dsp/dsp.yuv_sse2.c
  LibWebP/src/enc/enc.alpha.c
  LibWebP/src/enc/enc.analysis.c
  LibWebP/src/enc/enc.backward_references.c
  LibWebP/src/enc/enc.config.c
  LibWebP/src/enc/enc.cost.c
  LibWebP/src/enc/enc.filter.c
  LibWebP/src/enc/enc.frame.c
  LibWebP/src/enc/enc.histogram.c
  LibWebP/src/enc/enc.iterator.c
  LibWebP/src/enc/enc.near_lossless.c
  LibWebP/src/enc/enc.picture.c
  LibWebP/src/enc/enc.picture_csp.c
  LibWebP/src/enc/enc.picture_psnr.c
  LibWebP/src/enc/enc.picture_rescale.c
  LibWebP/src/enc/enc.picture_tools.c
  LibWebP/src/enc/enc.quant.c
  LibWebP/src/enc/enc.syntax.c
  LibWebP/src/enc/enc.token.c
  LibWebP/src/enc/enc.tree.c
  LibWebP/src/enc/enc.vp8l.c
  LibWebP/src/enc/enc.webpenc.c
  LibWebP/src/utils/utils.bit_reader.c
  LibWebP/src/utils/utils.bit_writer.c
  LibWebP/src/utils/utils.color_cache.c
  LibWebP/src/utils/utils.filters.c
  LibWebP/src/utils/utils.huffman.c
  LibWebP/src/utils/utils.huffman_encode.c
  LibWebP/src/utils/utils.quant_levels.c
  LibWebP/src/utils/utils.quant_levels_dec.c
  LibWebP/src/utils/utils.random.c
  LibWebP/src/utils/utils.rescaler.c
  LibWebP/src/utils/utils.thread.c
  LibWebP/src/utils/utils.utils.c
  LibWebP/src/mux/mux.anim_encode.c
  LibWebP/src/mux/mux.muxedit.c
  LibWebP/src/mux/mux.muxinternal.c
  LibWebP/src/mux/mux.muxread.c
  LibWebP/src/demux/demux.demux.c
)

set(OPENEXR_SOURCES
  OpenEXR/IlmImf/b44ExpLogTable.cpp
  OpenEXR/IlmImf/ImfAcesFile.cpp
  OpenEXR/IlmImf/ImfAttribute.cpp
  OpenEXR/IlmImf/ImfB44Compressor.cpp
  OpenEXR/IlmImf/ImfBoxAttribute.cpp
  OpenEXR/IlmImf/ImfChannelList.cpp
  OpenEXR/IlmImf/ImfChannelListAttribute.cpp
  OpenEXR/IlmImf/ImfChromaticities.cpp
  OpenEXR/IlmImf/ImfChromaticitiesAttribute.cpp
  OpenEXR/IlmImf/ImfCompositeDeepScanLine.cpp
  OpenEXR/IlmImf/ImfCompressionAttribute.cpp
  OpenEXR/IlmImf/ImfCompressor.cpp
  OpenEXR/IlmImf/ImfConvert.cpp
  OpenEXR/IlmImf/ImfCRgbaFile.cpp
  OpenEXR/IlmImf/ImfDeepCompositing.cpp
  OpenEXR/IlmImf/ImfDeepFrameBuffer.cpp
  OpenEXR/IlmImf/ImfDeepImageStateAttribute.cpp
  OpenEXR/IlmImf/ImfDeepScanLineInputFile.cpp
  OpenEXR/IlmImf/ImfDeepScanLineInputPart.cpp
  OpenEXR/IlmImf/ImfDeepScanLineOutputFile.cpp
  OpenEXR/IlmImf/ImfDeepScanLineOutputPart.cpp
  OpenEXR/IlmImf/ImfDeepTiledInputFile.cpp
  OpenEXR/IlmImf/ImfDeepTiledInputPart.cpp
  OpenEXR/IlmImf/ImfDeepTiledOutputFile.cpp
  OpenEXR/IlmImf/ImfDeepTiledOutputPart.cpp
  OpenEXR/IlmImf/ImfDoubleAttribute.cpp
  OpenEXR/IlmImf/ImfDwaCompressor.cpp
  OpenEXR/IlmImf/ImfEnvmap.cpp
  OpenEXR/IlmImf/ImfEnvmapAttribute.cpp
  OpenEXR/IlmImf/ImfFastHuf.cpp
  OpenEXR/IlmImf/ImfFloatAttribute.cpp
  OpenEXR/IlmImf/ImfFloatVectorAttribute.cpp
  OpenEXR/IlmImf/ImfFrameBuffer.cpp
  OpenEXR/IlmImf/ImfFramesPerSecond.cpp
  OpenEXR/IlmImf/ImfGenericInputFile.cpp
  OpenEXR/IlmImf/ImfGenericOutputFile.cpp
  OpenEXR/IlmImf/ImfHeader.cpp
  OpenEXR/IlmImf/ImfHuf.cpp
  OpenEXR/IlmImf/ImfInputFile.cpp
  OpenEXR/IlmImf/ImfInputPart.cpp
  OpenEXR/IlmImf/ImfInputPartData.cpp
  OpenEXR/IlmImf/ImfIntAttribute.cpp
  OpenEXR/IlmImf/ImfIO.cpp
  OpenEXR/IlmImf/ImfKeyCode.cpp
  OpenEXR/IlmImf/ImfKeyCodeAttribute.cpp
  OpenEXR/IlmImf/ImfLineOrderAttribute.cpp
  OpenEXR/IlmImf/ImfLut.cpp
  OpenEXR/IlmImf/ImfMatrixAttribute.cpp
  OpenEXR/IlmImf/ImfMisc.cpp
  OpenEXR/IlmImf/ImfMultiPartInputFile.cpp
  OpenEXR/IlmImf/ImfMultiPartOutputFile.cpp
  OpenEXR/IlmImf/ImfMultiView.cpp
  OpenEXR/IlmImf/ImfOpaqueAttribute.cpp
  OpenEXR/IlmImf/ImfOutputFile.cpp
  OpenEXR/IlmImf/ImfOutputPart.cpp
  OpenEXR/IlmImf/ImfOutputPartData.cpp
  OpenEXR/IlmImf/ImfPartType.cpp
  OpenEXR/IlmImf/ImfPizCompressor.cpp
  OpenEXR/IlmImf/ImfPreviewImage.cpp
  OpenEXR/IlmImf/ImfPreviewImageAttribute.cpp
  OpenEXR/IlmImf/ImfPxr24Compressor.cpp
  OpenEXR/IlmImf/ImfRational.cpp
  OpenEXR/IlmImf/ImfRationalAttribute.cpp
  OpenEXR/IlmImf/ImfRgbaFile.cpp
  OpenEXR/IlmImf/ImfRgbaYca.cpp
  OpenEXR/IlmImf/ImfRle.cpp
  OpenEXR/IlmImf/ImfRleCompressor.cpp
  OpenEXR/IlmImf/ImfScanLineInputFile.cpp
  OpenEXR/IlmImf/ImfStandardAttributes.cpp
  OpenEXR/IlmImf/ImfStdIO.cpp
  OpenEXR/IlmImf/ImfStringAttribute.cpp
  OpenEXR/IlmImf/ImfStringVectorAttribute.cpp
  OpenEXR/IlmImf/ImfSystemSpecific.cpp
  OpenEXR/IlmImf/ImfTestFile.cpp
  OpenEXR/IlmImf/ImfThreading.cpp
  OpenEXR/IlmImf/ImfTileDescriptionAttribute.cpp
  OpenEXR/IlmImf/ImfTiledInputFile.cpp
  OpenEXR/IlmImf/ImfTiledInputPart.cpp
  OpenEXR/IlmImf/ImfTiledMisc.cpp
  OpenEXR/IlmImf/ImfTiledOutputFile.cpp
  OpenEXR/IlmImf/ImfTiledOutputPart.cpp
  OpenEXR/IlmImf/ImfTiledRgbaFile.cpp
  OpenEXR/IlmImf/ImfTileOffsets.cpp
  OpenEXR/IlmImf/ImfTimeCode.cpp
  OpenEXR/IlmImf/ImfTimeCodeAttribute.cpp
  OpenEXR/IlmImf/ImfVecAttribute.cpp
  OpenEXR/IlmImf/ImfVersion.cpp
  OpenEXR/IlmImf/ImfWav.cpp
  OpenEXR/IlmImf/ImfZip.cpp
  OpenEXR/IlmImf/ImfZipCompressor.cpp
  OpenEXR/Imath/ImathBox.cpp
  OpenEXR/Imath/ImathColorAlgo.cpp
  OpenEXR/Imath/ImathFun.cpp
  OpenEXR/Imath/ImathMatrixAlgo.cpp
  OpenEXR/Imath/ImathRandom.cpp
  OpenEXR/Imath/ImathShear.cpp
  OpenEXR/Imath/ImathVec.cpp
  OpenEXR/Iex/IexBaseExc.cpp
  OpenEXR/Iex/IexThrowErrnoExc.cpp
  OpenEXR/Half/half.cpp
  OpenEXR/IlmThread/IlmThread.cpp
  OpenEXR/IlmThread/IlmThreadMutex.cpp
  OpenEXR/IlmThread/IlmThreadPool.cpp
  OpenEXR/IlmThread/IlmThreadSemaphore.cpp
  OpenEXR/IexMath/IexMathFloatExc.cpp
  OpenEXR/IexMath/IexMathFpu.cpp
)

find_package(ZLIB REQUIRED)

include_directories(
  "${ZLIB_INCLUDE_DIRS}"
  "${PROJECT_SOURCE_DIR}"
  "${PROJECT_SOURCE_DIR}/DeprecationManager"
  "${PROJECT_SOURCE_DIR}/LibJPEG"
  "${PROJECT_SOURCE_DIR}/LibOpenJPEG"
  "${PROJECT_SOURCE_DIR}/LibPNG"
  "${PROJECT_SOURCE_DIR}/LibRawLite"
  "${PROJECT_SOURCE_DIR}/LibTIFF4"
  "${PROJECT_SOURCE_DIR}/LibWebP"
  "${PROJECT_SOURCE_DIR}/OpenEXR"
  "${PROJECT_SOURCE_DIR}/OpenEXR/Half"
  "${PROJECT_SOURCE_DIR}/OpenEXR/Iex"
  "${PROJECT_SOURCE_DIR}/OpenEXR/IexMath"
  "${PROJECT_SOURCE_DIR}/OpenEXR/IlmImf"
  "${PROJECT_SOURCE_DIR}/OpenEXR/IlmThread"
  "${PROJECT_SOURCE_DIR}/OpenEXR/Imath"
)

add_definitions(
  -DNO_LCMS
  -DOPJ_STATIC
  -DLIBRAW_NODLL
  -DFREEIMAGE_LIB
  -DDISABLE_PERF_MEASUREMENT
)

if(UNIX)
add_definitions(-fPIC)
endif()

if(UNIX AND NOT APPLE)
add_definitions(-D__ANSI__)
endif()

if(WIN32)
add_definitions(-DWIN32 -DWINVER=0x0500)
endif()

if(MSVC)
include_directories("${PROJECT_SOURCE_DIR}/msvc")
endif()

add_library(
  freeimage ${LIB_MODE}
  ${FREEIMAGE_SOURCES}
  ${LIBJPEG_SOURCES}
  ${LIBOPENJPEG_SOURCES}
  ${LIBPNG_SOURCES}
  ${LIBRAWLITE_SOURCES}
  ${LIBTIFF_SOURCES}
  ${LIBWEBP_SOURCES}
  ${OPENEXR_SOURCES}
)

if(NOT MSVC)
set_target_properties(
  freeimage PROPERTIES
  COMPILE_FLAGS "-w -Wno-c++11-narrowing"
)
endif()

if(LIB_MODE MATCHES SHARED)
target_link_libraries(
  freeimage
  ${ZLIB_LIBRARIES}
)
endif()

if(LIB_MODE MATCHES SHARED AND WIN32)
find_library(WS2_32_LIB ws2_32)
target_link_libraries(
  freeimage
  ${WS2_32_LIB}
)
endif()
